--- a/WebApplication1/Web.config
+++ b/WebApplication1/Web.config
@@ -4,6 +4,16 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+	<connectionString>
+		<add name="WebApplication1"
+			 connectionString="Data Source=DESKTOP-RGO8R2P;
+                       Initial Catalog=WebApplication1;
+                       Persist Security Info=True;
+                       User ID=webserv;
+                       Password=Curs TW2CursTW!234;
+                       MultipleActiveResultSets=True"
+			 providerName="System.Data.SqlClient" />
+	</connectionString>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
