--- a/WebApplication1/Web.config
+++ b/WebApplication1/Web.config
@@ -4,6 +4,20 @@
   https://go.microsoft.com/fwlink/?LinkId=169433
   -->
 <configuration>
+	<configSections>
+		<!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+		<section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.4.4, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+	</configSections>
+	<connectionStrings>
+		<add name ="WebApplication1"
+       connectionString ="Data Source=DESKTOP-JPIUIOC;
+       Initial Catalog=WebApplication1;
+       Integrated Security=True;
+       MultipleActiveResultSets=True;
+       App=EntityFramework"
+       providerName ="System.Data.SqlClient"
+       />
+	</connectionStrings>
 	<appSettings>
 		<add key="webpages:Version" value="3.0.0.0" />
 		<add key="webpages:Enabled" value="false" />
