--- a/WebApplication1/Web.config
+++ b/WebApplication1/Web.config
@@ -10,14 +10,17 @@
   </configSections>
 	<connectionStrings>
 		<add name ="WebApplication1"
-			 connectionString ="Data Source=DESKTOP-JPIUIOC;
+			 connectionString ="Data Source=DESKTOP-NB2A8D7;
 			 Initial Catalog=WebApplication1;
 			 Integrated Security=True;
 			 MultipleActiveResultSets=True;
 			 App=EntityFramework"
 			 providerName ="System.Data.SqlClient"
 			 />
-	</connectionStrings> 
+	</connectionStrings>
+
+	
+	
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
