--- a/WebApplication1/packages.config
+++ b/WebApplication1/packages.config
@@ -2,6 +2,10 @@
 <packages>
   <package id="bootstrap" version="5.3.3" targetFramework="net48" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net48" />
+  <package id="FontAwesome" version="4.7.0" targetFramework="net48" />
+  <package id="jQuery" version="2.0.0" targetFramework="net48" />
+  <package id="jQuery.UI.Combined" version="1.13.2" targetFramework="net48" />
+  <package id="jQuery.Validation" version="1.20.0" targetFramework="net48" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.9" targetFramework="net48" />
   <package id="Microsoft.AspNet.Razor" version="3.2.9" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.9" targetFramework="net48" />
