--- a/WebApplication1.BusinessLogic/WebApplication1.BusinessLogic.csproj
+++ b/WebApplication1.BusinessLogic/WebApplication1.BusinessLogic.csproj
@@ -55,6 +55,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BusinessLogic.cs" />
+    <Compile Include="DBModel\SessionContext.cs" />
     <Compile Include="DBModel\UserContext.cs" />
     <Compile Include="Interfaces\ILogin.cs" />
     <Compile Include="MainAPI\AdminAPI.cs" />
