--- a/WebApplication1/Web.config
+++ b/WebApplication1/Web.config
@@ -10,7 +10,7 @@
   </configSections>
 	<connectionStrings>
 		<add name ="WebApplication1"
-			 connectionString ="Data Source=DESKTOP-NB2A8D7;
+			 connectionString ="Data Source=DESKTOP-JPIUIOC;
 			 Initial Catalog=WebApplication1;
 			 Integrated Security=True;
 			 MultipleActiveResultSets=True;
