--- a/WebApplication1/WebApplication1.Web.csproj
+++ b/WebApplication1/WebApplication1.Web.csproj
@@ -400,6 +400,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
+    <Folder Include="Attribute\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\WebApplication1.BusinessLogic\WebApplication1.BusinessLogic.csproj">
