--- a/WebApplication1.BusinessLogic/WebApplication1.BusinessLogic.csproj
+++ b/WebApplication1.BusinessLogic/WebApplication1.BusinessLogic.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System.Data.SqlClient, Version=4.6.1.6, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Data.SqlClient.4.8.6\lib\net461\System.Data.SqlClient.dll</HintPath>
     </Reference>
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -55,10 +56,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BusinessLogic.cs" />
+    <Compile Include="Core\ProductCore\ProductAPI.cs" />
+    <Compile Include="DBModel\ProductContext.cs" />
+    <Compile Include="DBModel\SessionContext.cs" />
     <Compile Include="DBModel\UserContext.cs" />
     <Compile Include="Interfaces\ILogin.cs" />
-    <Compile Include="MainAPI\AdminAPI.cs" />
-    <Compile Include="MainAPI\UserAPI.cs" />
+    <Compile Include="Core\UserCore\AdminAPI.cs" />
+    <Compile Include="Core\UserCore\UserAPI.cs" />
     <Compile Include="MainBL\LoginBL.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SessionBL.cs" />
