--- a/WebApplication1.Domain/WebApplication1.Domain.csproj
+++ b/WebApplication1.Domain/WebApplication1.Domain.csproj
@@ -56,11 +56,6 @@
   <ItemGroup>
     <Compile Include="Class1.cs" />
     <Compile Include="Entities\Respond\LoginResponse.cs" />
-    <Compile Include="Entities\L&amp;R\ULoginData.cs" />
-    <Compile Include="Entities\L&amp;R\URegisterData.cs" />
-    <Compile Include="Entities\User\DbTable\UDbAddInfo.cs" />
-    <Compile Include="Entities\User\DbTable\UDbSession.cs" />
-    <Compile Include="Entities\User\DbTable\UserDTO.cs" />
     <Compile Include="Enums\Levels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -73,6 +68,9 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Entities\User\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
