--- a/WebApplication1/Web.config
+++ b/WebApplication1/Web.config
@@ -9,17 +9,9 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
 	<connectionStrings>
-		<add name ="WebApplication1"
-			 connectionString ="Data Source=DESKTOP-JPIUIOC;
-			 Initial Catalog=WebApplication1;
-			 Integrated Security=True;
-			 MultipleActiveResultSets=True;
-			 App=EntityFramework"
-			 providerName ="System.Data.SqlClient"
-			 />
+		<add name="WebApplication1" connectionString="Data Source=DESKTOP-NB2A8D7;     Initial Catalog=WebApplication1;     Integrated Security=True;     MultipleActiveResultSets=True;     App=EntityFramework" providerName="System.Data.SqlClient" />
 	</connectionStrings>
 
-	
 	
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -79,7 +71,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="0.0.0.0-1.6.5135.21930" newVersion="1.6.5135.21930" />
+        <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
