--- a/WebApplication1/packages.config
+++ b/WebApplication1/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Antlr" version="3.4.1.9004" targetFramework="net48" />
   <package id="bootstrap" version="5.3.3" targetFramework="net48" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net48" />
   <package id="FontAwesome" version="4.7.0" targetFramework="net48" />
@@ -8,6 +9,7 @@
   <package id="jQuery.Validation" version="1.20.0" targetFramework="net48" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.9" targetFramework="net48" />
   <package id="Microsoft.AspNet.Razor" version="3.2.9" targetFramework="net48" />
+  <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.9" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.9" targetFramework="net48" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.9" targetFramework="net48" />
@@ -17,4 +19,5 @@
   <package id="Microsoft.Web.Infrastructure" version="2.0.1" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net48" />
   <package id="System.Data.SqlClient" version="4.8.6" targetFramework="net48" />
+  <package id="WebGrease" version="1.5.2" targetFramework="net48" />
 </packages>
