--- a/WebApplication1/Web.config
+++ b/WebApplication1/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
 	<connectionStrings>
-		<add name="WebApplication1" connectionString="Data Source=DESKTOP-NB2A8D7;     Initial Catalog=WebApplication1;     Integrated Security=True;     MultipleActiveResultSets=True;     App=EntityFramework" providerName="System.Data.SqlClient" />
+		<add name="WebApplication1" connectionString="Data Source=DESKTOP-JPIUIOC;     Initial Catalog=WebApplication1;     Integrated Security=True;     MultipleActiveResultSets=True;     App=EntityFramework" providerName="System.Data.SqlClient" />
 	</connectionStrings>
 
 	
